DataTable updates fix #3

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -1,125 +1,127 @@
 <div class="row expand">
+    <div class="s12 m7 l8 col">
+        <h3 class="color-black margin-bottom-none">
+            {{title | phrase}}
+            <material-icon
+                    baseline
+                    *ngIf="description != null"
+                    size="x-large"
+                    icon="help_outline"
+                    (click)="infoModalOpen = true"
+                    class="clickable">
+            </material-icon>
+        </h3>
+    </div>
+    <div class="s12 m5 l4 col text-right">
+        <material-input
+                class="text-left"
+                [displayBottomPanel]="false"
+                [disabled]="disabled"
+                label="{{filterLabel | phrase}}"
+                trailingGlyph="search"
+                [(ngModel)]="searchPhrase"
+                (keyup)="onSearchKeyUp($event)">
+        </material-input>
+    </div>
+</div>
+
+<div class="row expand">
     <div class="s12 col">
-        <table [class.faded]="disabled" class="output color-black box-shadow margin-bottom-x-small">
-            <caption>
-                <div class="row expand">
-                    <div class="s12 m7 l8 col">
-                        <h3 class="color-black margin-bottom-none">
-                            {{title | phrase}}
-                            <material-icon
-                                    baseline
-                                    *ngIf="description != null"
-                                    size="x-large"
-                                    icon="help_outline"
-                                    (click)="infoModalOpen = true"
-                                    class="clickable">
-                            </material-icon>
-                        </h3>
-                    </div>
-                    <div class="s12 m5 l4 col text-right">
-                        <material-input
-                                class="text-left"
-                                [displayBottomPanel]="false"
-                                [disabled]="disabled"
-                                label="{{filterLabel | phrase}}"
-                                trailingGlyph="search"
-                                [(ngModel)]="searchPhrase"
-                                (keyup)="onSearchKeyUp($event)">
-                        </material-input>
-                    </div>
-                </div>
-            </caption>
-            <thead>
-            <tr #headRow>
-                <td *ngIf="showCheckboxes">
-                    <material-checkbox (checkedChange)="onAllCheckedChange($event)"></material-checkbox>
-                </td>
-                <td *ngFor="let cell of columns"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onSort(cell)">
-                    <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
-                    <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
-                    <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
-                </td>
-                <td *ngFor="let cell of evaluatedColumns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onSort(cell)">
-                    <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
-                    <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
-                    <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
-                </td>
-                <td *ngIf="showDeleteButtons" class="buttonCell"></td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex" (click)="onRowClickController.add(key)">
-                <td *ngIf="showCheckboxes">
-                    <material-checkbox
-                            [checked]="selectedRows.contains(key)"
-                            (checkedChange)="onCheckedChange(key, $event)"
-                            (click)="$event.stopPropagation()">
-                    </material-checkbox>
-                </td>
-                <td
-                        *ngFor="let cell of columns"
+        <div class="table-container box-shadow">
+            <table [class.faded]="disabled" class="output color-black margin-bottom-x-small">
+                <thead>
+                <tr #headRow>
+                    <td *ngIf="showCheckboxes">
+                        <material-checkbox (checkedChange)="onAllCheckedChange($event)"></material-checkbox>
+                    </td>
+                    <td *ngFor="let cell of columns"
                         [class.hide-for-small]="smallHiddenCol.contains(cell)"
                         [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                         [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                        (click)="onCellClickController.add(data[key][cell])">
-                    {{data[key][cell]?.toString()}}
-                </td>
-                <td *ngFor="let cell of evaluatedColumns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onCellClickController.add(evaluatedColumns[cell](data[key]))">
-                    {{evaluatedColumns[cell](data[key])}}
-                </td>
-                <td *ngIf="showDeleteButtons" class="text-center">
-                    <material-icon
-                            class="clickable color-alert"
-                            icon="delete_forever"
-                            size="x-large"
-                            (click)="deleteBufferId = key; $event.stopPropagation()">
-                    </material-icon>
-                </td>
-            </tr>
-            <tr *ngIf="filteredKeys.isEmpty">
-                <td *ngIf="disabled" attr.colspan="{{numColumns}}"><h4 class="text-center"><material-spinner></material-spinner></h4></td>
-                <td *ngIf="!disabled" attr.colspan="{{numColumns}}" class="empty-info color-alert"><h4><material-icon size="x-large" icon="error"></material-icon>&nbsp;{{'no_results' | phrase}}</h4></td>
-            </tr>
-            </tbody>
-            <tfoot>
-            <tr>
-                <td *ngIf="showDownloadButton || showAddButton">
-                    <material-button
-                            class="float-left"
-                            *ngIf="showDownloadButton"
-                            clear-size
-                            raised
-                            dense
-                            [disabled]="disabled || data.isEmpty"
-                            [materialTooltip]="'download_csv' | phrase"
-                            (trigger)="onDownloadDataCSV()">
-                        <material-icon class="color-black" size="medium" icon="file_download"></material-icon>
-                    </material-button>
-                    <material-button
-                            class="float-left"
-                            *ngIf="showAddButton"
-                            clear-size
-                            raised
-                            dense
-                            [disabled]="disabled"
-                            [materialTooltip]="'add' | phrase"
-                            (trigger)="onAddController.add('')">
-                        <material-icon class="color-black" size="medium" icon="add"></material-icon>
-                    </material-button>
-                </td>
-                <td attr.colspan="{{footerColSpan}}">
+                        (click)="onSort(cell)">
+                        <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
+                        <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
+                        <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
+                    </td>
+                    <td *ngFor="let cell of evaluatedColumns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                        (click)="onSort(cell)">
+                        <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
+                        <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
+                        <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
+                    </td>
+                    <td *ngIf="showDeleteButtons" class="buttonCell"></td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex" (click)="onRowClickController.add(key)">
+                    <td *ngIf="showCheckboxes">
+                        <material-checkbox
+                                [checked]="selectedRows.contains(key)"
+                                (checkedChange)="onCheckedChange(key, $event)"
+                                (click)="$event.stopPropagation()">
+                        </material-checkbox>
+                    </td>
+                    <td
+                            *ngFor="let cell of columns"
+                            [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                            [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                            [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                            (click)="onCellClickController.add(data[key][cell])">
+                        {{data[key][cell]?.toString()}}
+                    </td>
+                    <td *ngFor="let cell of evaluatedColumns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                        (click)="onCellClickController.add(evaluatedColumns[cell](data[key]))">
+                        {{evaluatedColumns[cell](data[key])}}
+                    </td>
+                    <td *ngIf="showDeleteButtons" class="text-center">
+                        <material-icon
+                                class="clickable color-alert"
+                                icon="delete_forever"
+                                size="x-large"
+                                (click)="deleteBufferId = key; $event.stopPropagation()">
+                        </material-icon>
+                    </td>
+                </tr>
+                <tr *ngIf="filteredKeys.isEmpty">
+                    <td *ngIf="disabled" attr.colspan="{{numColumns}}"><h4 class="text-center"><material-spinner></material-spinner></h4></td>
+                    <td *ngIf="!disabled" attr.colspan="{{numColumns}}" class="empty-info color-alert"><h4><material-icon size="x-large" icon="error"></material-icon>&nbsp;{{'no_results' | phrase}}</h4></td>
+                </tr>
+                </tbody>
+            </table>
+            <div class="row expand">
+                <div class="s2 col">
+                    <div *ngIf="showDownloadButton || showAddButton">
+                        <material-button
+                                class="float-left"
+                                *ngIf="showDownloadButton"
+                                clear-size
+                                raised
+                                dense
+                                [disabled]="disabled || data.isEmpty"
+                                [materialTooltip]="'download_csv' | phrase"
+                                (trigger)="onDownloadDataCSV()">
+                            <material-icon class="color-black" size="medium" icon="file_download"></material-icon>
+                        </material-button>
+                        <material-button
+                                class="float-left"
+                                *ngIf="showAddButton"
+                                clear-size
+                                raised
+                                dense
+                                [disabled]="disabled"
+                                [materialTooltip]="'add' | phrase"
+                                (trigger)="onAddController.add('')">
+                            <material-icon class="color-black" size="medium" icon="add"></material-icon>
+                        </material-button>
+                    </div>
+                </div>
+                <div class="s10 col">
                     <div id="select-step">
                         <div class="float-right" id="rows-per-page">
                             <span>{{'rows' | phrase}}/{{'page' | phrase:false}}:</span>
@@ -147,11 +149,9 @@
                             </material-icon>
                         </div>
                     </div>
-                </td>
-            </tr>
-
-            </tfoot>
-        </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
