--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -22,121 +22,9 @@ fieldset
   opacity: 0.6;
 }
 
-table.output
-{
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  width: 100%;
-  min-width: 240px;
-  border-collapse: collapse;
-  border:2px solid #eee;
-  font-size: 0.7rem;
-  table-layout: fixed;
-
-  td
-  {
-    padding: 0.5em;
-    white-space: nowrap;
-  }
-
-  thead
-  {
-    tr
-    {
-      background-color: #eee;
-      td
-      {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        cursor: pointer;
-
-        span
-        {
-            font-size: 0.9rem;
-            font-stretch: ultra-condensed
-        }
-        span.underline
-        {
-            text-decoration: underline;
-        }
-      }
-
-      td.buttonCell
-      {
-        width: 1rem;
-      }
-    }
-    border-bottom: 2px solid #ddd;
-  }
-
-  tbody
-  {
-    tr
-    {
-      cursor: pointer;
-      td
-      {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      td.empty-info
-      {
-        h4
-        {
-          margin: 0.4rem;
-          padding: 0.2rem;
-          line-height: 100%;
-          font-size: 1.2rem;
-          text-align: center;
-        }
-      }
-
-    }
-    tr:nth-child(even)
-    {
-      background-color: #f5f5f5;
-    }
-    tr:nth-child(odd)
-    {
-      background-color: #fff;
-    }
-    tr:hover
-    {
-      background-color: #eee;
-    }
-    border-bottom: 1px solid #ddd;
-  }
-
-  tfoot
-  {
-  }
-}
-
-#select-step
-{
-  #rows-per-page
-  {
-    margin-top: 0.15rem;
-  }
-
-  font-size: 0.9rem;
-  color: #888;
-
-  material-icon.disabled
-  {
-    opacity: 0.3;
-  }
-}
 
 material-input
-{ 
+{
   width: 100%;
 }
 
@@ -144,4 +32,120 @@ material-input
 {
     user-select: none;
     -webkit-user-select: none;
+}
+
+
+div.table-container
+{
+    min-width: 285px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    table.output
+    {
+      -webkit-transition: opacity 0.2s;
+      -moz-transition: opacity 0.2s;
+      -o-transition: opacity 0.2s;
+      transition: opacity 0.2s;
+      width: 100%;
+      border-collapse: collapse;
+      border:2px solid #eee;
+      font-size: 0.7rem;
+      table-layout: fixed;
+
+      td
+      {
+        padding: 0.5em;
+        white-space: nowrap;
+      }
+
+      thead
+      {
+        tr
+        {
+          background-color: #eee;
+          td
+          {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            cursor: pointer;
+
+            span
+            {
+                font-size: 0.9rem;
+                font-stretch: ultra-condensed
+            }
+            span.underline
+            {
+                text-decoration: underline;
+            }
+          }
+
+          td.buttonCell
+          {
+            width: 1rem;
+          }
+        }
+        border-bottom: 2px solid #ddd;
+      }
+
+      tbody
+      {
+        tr
+        {
+          cursor: pointer;
+          td
+          {
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          td.empty-info
+          {
+            h4
+            {
+              margin: 0.4rem;
+              padding: 0.2rem;
+              line-height: 100%;
+              font-size: 1.2rem;
+              text-align: center;
+            }
+          }
+
+        }
+        tr:nth-child(even)
+        {
+          background-color: #f5f5f5;
+        }
+        tr:nth-child(odd)
+        {
+          background-color: #fff;
+        }
+        tr:hover
+        {
+          background-color: #eee;
+        }
+        border-bottom: 1px solid #ddd;
+      }
+    }
+
+    #select-step
+    {
+      margin-top: 0.2rem;
+      #rows-per-page
+      {
+        margin-top: 0.15rem;
+        margin-left: 0.2rem;
+      }
+
+      font-size: 0.9rem;
+      color: #888;
+
+      material-icon.disabled
+      {
+        opacity: 0.3;
+      }
+    }
 }
