DataTable updates fix #4

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -156,6 +156,7 @@
 </div>
 
 <div class="row" *ngIf="showCheckboxes == true && batchOperationOptions != null">
+    <div class="l8 m6 s0 col"></div>
     <div class="l4 m6 col">
         <fo-select
                 label="with_selected"
