--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -42,6 +42,7 @@ div.table-container
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    background-color: white;
 
     table.output
     {
