--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -26,7 +26,7 @@
 </div>
 
 
-<div class="table-container box-shadow">
+<div class="table-container box-shadow" #tableContainer>
     <table [class.faded]="disabled" class="output color-black margin-bottom-x-small">
         <thead>
         <tr>
