DataTable added left padding to first cell

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -63,6 +63,11 @@ div.table-container
         white-space: nowrap;
       }
 
+        td:first-child
+        {
+            padding-left: 0.5em;
+        }
+
       thead
       {
         tr
