--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -19,10 +19,10 @@
             </h3>
         </div>
         <div class="modal-content" *ngIf="visible">
-            <ng-content></ng-content>
+            <ng-content *ngIf="visible"></ng-content>
         </div>
         <div class="padding-top-small" footer>
-            <ng-content select="[footer]"></ng-content>
+            <ng-content *ngIf="visible" select="[footer]"></ng-content>
         </div>
     </material-dialog>
 </modal>
