--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -21,7 +21,7 @@
         <div class="modal-content" *ngIf="visible">
             <ng-content></ng-content>
         </div>
-        <div class="padding-top-small" footer>
+        <div class="padding-top-small" footer *ngIf="visible">
             <ng-content select="[footer]"></ng-content>
         </div>
     </material-dialog>
