--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -148,7 +148,7 @@
             min-width: 315px;
             #page-header
             {
-              margin: 1rem;
+              margin: 1rem 0;
               border-bottom: 2px solid $colorBlack;
 
               material-icon
