data-table changed batchOperation button from icon to "go"

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -166,7 +166,7 @@
             <fo-select
                     label="with_selected"
                     [showActionButton]="true"
-                    actionButtonIcon="play_arrow"
+                    actionButtonText="go"
                     [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
                     [options]="batchOperationOptions"
                     [selectedId]="batchOperations.first.id"
