--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -18,10 +18,10 @@
                 </material-button>
             </h3>
         </div>
-        <div class="modal-content" *ngIf="visible">
+        <div class="modal-content">
             <ng-content></ng-content>
         </div>
-        <div class="padding-top-small" footer *ngIf="visible">
+        <div class="padding-top-small" footer>
             <ng-content select="[footer]"></ng-content>
         </div>
     </material-dialog>
