data table minor fixes

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -91,7 +91,7 @@
             <p class="text-center"><material-spinner></material-spinner></p>
         </div>
         <div class="col color-alert text-center" *ngIf="!disabled">
-            <p>
+            <p class="margin-bottom-none">
                 <material-icon size="x-large" icon="error"></material-icon>
                 {{'no_results' | phrase}}
             </p>
