fo-number-input fix #2

--- a/lib/src/components/fo_number_input_component/fo_number_input_component.scss
+++ b/lib/src/components/fo_number_input_component/fo_number_input_component.scss
@@ -9,11 +9,12 @@ label
 span
 {
     color: #666;
+    white-space: nowrap;
 }
 span#valueOutput
 {
     display: inline-block;
-    min-width: 3rem;
+    min-width: 2rem;
     text-align: center;
 }
 
