changed [options] input on fo-select and fo-multiselect from StringSelectionOptions to List (it gets converted internally now)

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -168,7 +168,7 @@
                     [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
                     [options]="batchOperationOptions"
                     [selectedId]="batchOperations.first.id"
-                    (actionButtonTrigger)="onBatchOperationTrigger($event.id)">
+                    (actionButtonTrigger)="onBatchOperationTrigger($event)">
             </fo-select>
         </div>
     </div>
