updated other components using fo-select

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -166,7 +166,7 @@
                     [showActionButton]="true"
                     actionButtonText="go"
                     [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
-                    [options]="batchOperationOptions"
+                    [options]="batchOperations"
                     [selectedId]="batchOperations.first.id"
                     (actionButtonTrigger)="onBatchOperationTrigger($event)">
             </fo-select>
