--- a/lib/src/components/fo_image_map_component/fo_image_map_component.html
+++ b/lib/src/components/fo_image_map_component/fo_image_map_component.html
@@ -34,7 +34,7 @@
         *ngIf="showSelector"
         [label]="label"
         [fullWidth]="true"
-        [options]="zoneOptions"
+        [options]="zones"
         [selectedIds]="selectedIds"
         (selectedIdsChange)="onSelectionChange($event)">
 </fo-multi-select>
