--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
@@ -1,11 +1,9 @@
 <span class="label">{{label | phrase}}</span>
 <material-dropdown-select
         [class.full-width]="fullWidth"
-        [disabled]="disabled || selectionOptions == null || selectionModel == null"
-        buttonText="{{buttonText | phrase}}..."
+        [disabled]="disabled || selectionOptions == null"
+        buttonText="{{buttonText | phrase}}"
         [popupMatchInputWidth]="false"
-        [options]="selectionOptions"
-        [selection]="selectionModel"
         [(visible)]="visible"
         id="select">
     <div *ngIf="showSearch" header>
@@ -14,20 +12,25 @@
                 [filterable]="selectionOptions">
         </material-select-searchbox>
     </div>
+    <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList" class="text-left">
+        <material-checkbox
+                label="{{option.toString() | phrase}}"
+                [checked]="selectedIds.contains(option.id)"
+                (click)="onToggle(option.id, !selectedIds.contains(option.id))">
+        </material-checkbox>
+    </material-select-dropdown-item>
 </material-dropdown-select>
 
-<div *ngIf="allowReorder" class="selectedValues">
-    <reorder-list *ngIf="selectionModel.isNotEmpty" (reorder)="onReorder($event)" class="selected-values">
-        <div *ngFor="let value of selectionModel.selectedValues" reorderItem>
-        {{value}}
-        </div>
+<material-chips *ngIf="allowReorder" class="selectedValues">
+    <reorder-list *ngIf="selectionOptions.isNotEmpty" (reorder)="onReorder($event)" class="selected-values">
+        <material-chip *ngFor="let id of selectedIds" (remove)="onToggle(id, false)" reorderItem>
+            {{getModel(id)?.toString() | phrase}}
+        </material-chip>
     </reorder-list>
-</div>
+</material-chips>
 <material-chips *ngIf="!allowReorder" class="selectedValues">
-    <material-chip
-            *ngFor="let value of selectionModel.selectedValues"
-            (remove)="selectionModel.deselect(value)">
-        {{value}}
+    <material-chip *ngFor="let id of selectedIds" (remove)="onToggle(id, false)">
+        {{getModel(id)?.toString() | phrase}}
     </material-chip>
 </material-chips>
-<div *ngIf="selectionModel.isEmpty" class="selectedValues">{{nullSelectionButtonText | phrase}}</div>
+<div *ngIf="!selectionOptions.isNotEmpty" class="selectedValues">{{nullSelectionButtonText | phrase}}</div>
